# armin-knx

./: Cargo.toml  README.md  log.txt
res/: config.json  schedule.json  script.js
res/tpl/: index.html  javascript.js  style.css  tpl_form  tpl_index.html
src/: config.rs  data.rs  html.rs  httpserver.rs  knx.rs  main.rs  scheduler.rs  sensors.rs  youless.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
template/: default-style.css  functions.js  index.html  tpl_index
ui/: index.html
