[package]
name = "armin-knx"
version = "0.1.0"
authors = ["Armin <armin@arbu.eu>"]
edition = "2021"


[dependencies]
scanf = "1.2.1"
hyper = { version = "0.13.4" }
tokio = { version = "0.2.25", features = ["full"] }
regex = "1.6.0"
serde_json = "1.0"
serde = { version = "1.0.145", features = ["derive"] }
handlebars = "4.3"