[package]
name = "armin-knx"
version = "0.1.0"
authors = ["Armin <armin@arbu.eu>"]
edition = "2021"


[dependencies]
scanf = "1.2.1"
hyper = { version = "0.14.15", features = ["full"] }
tokio = { version = "1.36.0" , features = ["full"] }
regex = "1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
handlebars = "5.1.0"
chrono = "0.4.30"
# plotters = "0.3"
sunrise = { package = "sunrise-next", version = "1.0.1" }
sqlite = "0.34.0"
# influxdb = "0.7.2"